# pliego

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
docs/: migrating-from-quarto.md
src/pliego/: __init__.py  _hyphen.py  cli.py  config.py  doc.py  parse.py
src/pliego/render/: __init__.py  pdf.py
tests/integration/: test_end_to_end.py
tests/integration/fixtures/: ecuador-report.md  minimal_es.md  structured_es.md
tests/unit/: test_cli.py  test_config.py  test_doc.py  test_parse.py  test_render_pdf.py
