[project]
name = "pliego"
version = "0.3.0"
description = "Pure-Python Markdown → PDF renderer. Small, fast, no C bindings."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alejandro Piad", email = "apiad@apiad.net" }]
requires-python = ">=3.12"
dependencies = [
  "markdown-it-py>=3.0",
  "mdit-py-plugins>=0.4",
  "PyYAML>=6.0",
  "pydantic>=2.5",
  "fpdf2>=2.7",
  "pyphen>=0.14",
]

[project.scripts]
pliego = "pliego.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pypdf>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pliego"]
